--- a/index.html
+++ b/index.html
@@ -323,8 +323,11 @@
         <div class="lower">
           <div class="grill">
             <div class="hint">
-              גרור את המחוג או סובב את הכפתור.
-              <br/>שמאל = פחד • ימין = אהבה
+              <br/>איפה אתם על הציר?
+              <br/>רוצים לשנות?
+              <br/>קחו נשימה,
+              <br/>התרכזו ברגע הזה
+              <br/>גררו את המחוג או סובבו את הכפתור.
             </div>
           </div>
 
